--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^12.10.5",
     "next": "15.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-just-parallax": "^3.1.16",
     "react-simple-typewriter": "^5.0.1",
     "react-syntax-highlighter": "^15.6.1"
   },
